<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Registration_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_Registration"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textColor="#006622"
            android:textSize="30sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_usernameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/register_UserNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_Username"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPersonName"
            android:maxLength="@integer/MAXUSERNAMELENGTH" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_passwordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/register_PasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_Password"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPassword"
            android:maxLength="@integer/MAXPASSWORDLENGTH" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_confirmPasswordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/register_ConfirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_ConfirmPassword"
            android:inputType="textPassword"
            android:maxLength="@integer/MAXPASSWORDLENGTH"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_firstNameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/user_firstName_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_lastNameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/user_lastName_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_phoneNumberTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/user_phoneNumber_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789+"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_faxNumberTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/user_faxNumber_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fax_number"
            android:inputType="number"
            android:digits="0123456789+"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_licenseNumberTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/user_licenseNumber_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/licesneNumber"
            android:inputType="number"
            android:digits="0123456789+"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_emailAddressTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/user_emailAddress_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_companyNameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/user_CompanyName_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/company"
            android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/register_ContinueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/register_Continue" />

        <Button
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/register_CancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_Cancel" />

    </LinearLayout>
</ScrollView>