<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project.senior.hardhats.AddCustomer">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/save_customer_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save" />

            <TextView
                android:id="@+id/customer_first_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/customer_first_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/customer_Last_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/customer_last_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/customer_company_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company" />

            <EditText
                android:id="@+id/customer_company_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
            android:id="@+id/customer_phone_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number" />

            <EditText
                android:id="@+id/customer_phone_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="" />

            <TextView
                android:id="@+id/customer_fax_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fax_number" />

            <EditText
                android:id="@+id/customer_fax_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="" />


            <TextView
                android:id="@+id/customer_email_address_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/customer_email_address_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="" />

            <TextView
                android:id="@+id/house_number_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/house_number" />

            <EditText
                android:id="@+id/customer_house_number_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="" />

            <TextView
                android:id="@+id/customer_street_address_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/street" />

            <EditText
                android:id="@+id/customer_street_address_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/customer_zip_code_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zip_code" />

            <EditText
                android:id="@+id/customer_zip_code_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="" />



            <TextView
                android:id="@+id/customer_state_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/state" />

            <Spinner
                android:id="@+id/customer_state_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
