<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center"
    android:orientation="vertical"
    tools:context="project.senior.hardhats.GenerateInvoiceActivity">
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <Spinner
        android:id="@+id/generateinvoice_chooseCustomerSpinner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.05" />

    <Button
        android:id="@+id/generateinvoice_chooseCustomerButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.05"
        android:text="@string/generateinvoice_choosecustomer" />


    <TextView
        android:id="@+id/generateinvoice_firstNameLabel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:text="@string/first_name" />

    <TextView
        android:id="@+id/generateinvoice_firstNameTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_weight="1.1" />

    <TextView
        android:id="@+id/generateinvoice_lastLabel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:text="@string/last_name" />

    <TextView
        android:id="@+id/generateinvoice_lastNameTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"

        android:layout_weight="1.1" />

    <TextView
        android:id="@+id/generateinvoice_phoneLabel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:text="@string/phone_number" />

    <TextView
        android:id="@+id/generateinvoice_phoneNumberTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_weight="1.1" />

    <TextView
        android:id="@+id/generateinvoice_emailLabel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:text="@string/email" />

    <TextView
        android:id="@+id/generateinvoice_emailTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_weight="1.1" />

    <TextView
        android:id="@+id/generateinvoice_addressLabel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:text="@string/generateinvoice_address" />

    <TextView
        android:id="@+id/generateinvoice_addressTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="none"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingBottom="25dp">

        <CheckBox
            android:id="@+id/generateinvoice_useGeneralContractorEmailCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/generateinvoice_usegeneralcontractor" />

        <EditText
            android:id="@+id/generateinvoice_gcEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="13" />

    </LinearLayout>




</LinearLayout>

